--- a/style.css
+++ b/style.css
@@ -185,6 +185,10 @@
     .home .home-content .text-3 {
         font-size: 35px;
     }
+    .home .home-content a {
+        font-size: 20px;
+        padding: 10px 30px;
+    }
 }
 
 @media (max-width: 650px) {
