--- a/style.css
+++ b/style.css
@@ -133,17 +133,24 @@
     background: none;
 }
 
-/* about section styling */
+/* constant section styling */
 
 section {
     padding: 100px 0;
 }
 
-.about {
+.about, .skills {
     font-family: 'Poppins', sans-serif;
 }
 
-.about .title {
+.about .about-content, .skills .skills-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section .title {
     position: relative;
     text-align: center;
     font-size: 40px;
@@ -153,7 +160,7 @@ section {
     font-family: 'Ubuntu', sans-serif;
 }
 
-.about .title::before {
+section .title::before {
     content: "";
     position: absolute;
     bottom: 0px;
@@ -164,8 +171,7 @@ section {
     transform: translateX(-50%);
 }
 
-.about .title::after {
-    content: "who I am";
+section .title::after {
     position: absolute;
     bottom: -12px;
     left: 50%;
@@ -176,11 +182,14 @@ section {
     transform: translateX(-50%);
 }
 
-.about .about-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+/* about section styling */
+
+.about {
+    font-family: 'Poppins', sans-serif;
+}
+
+.about .title::after {
+    content: "who I am";
 }
 
 .about .about-content .left {
@@ -230,13 +239,50 @@ section {
     background: none;
 }
 
+/* skills styling section */
+
+.skills {
+    color: #fff;
+    background: #111;
+}
+
+.skills .title::before {
+    background: #fff;
+}
+
+.skills .title::after {
+    background: #111;
+    content: "what I know";
+}
+
+.skills .skills-content .column {
+    width: calc(50% - 30px);
+}
+
+.skills .skills-content .left .text {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .right .bars {
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .right .info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right span {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+
 /* responsive media query start */
 
-@media (max-width: 1300px) {
-    .home .max-width {
-        margin-left: 0px;
-    }
-}
 
 @media (max-width: 1104px) {
     .about .about-content .left img {
@@ -298,7 +344,7 @@ section {
         max-width: 800px;
     }
     .about .about-content .column {
-        width: 100%;
+        width: 50%;
     }
     .about .about-content .left {
         display: flex;
