--- a/style.css
+++ b/style.css
@@ -265,19 +265,82 @@ section .title::after {
     margin-bottom: 10px;
 }
 
+.skills .skills-content .left p {
+    text-align: justify;
+}
+
+.skills .skills-content .left a {
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease
+}
+
+.skills .skills-content .left a:hover {
+    color: crimson;
+    background: none;
+}
+
 .skills .skills-content .right .bars {
     margin-bottom: 10px;
 }
 
 .skills .skills-content .right .info {
     display: flex;
+    margin-bottom: 5px;
     align-items: center;
     justify-content: space-between;
 }
 
 .skills .skills-content .right span {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
+}
+
+.skills .skills-content .right .line {
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+
+.skills .skills-content .right .line::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: crimson;
+}
+
+.skills .skills-content .right .html::before {
+    width: 95%;
+}
+
+.skills .skills-content .right .css::before {
+    width: 80%;
+}
+
+.skills .skills-content .right .js::before {
+    width: 90%;
+}
+
+.skills .skills-content .right .react::before {
+    width: 70%;
+}
+
+.skills .skills-content .right .ruby::before {
+    width: 75%;
+}
+
+.skills .skills-content .right .sql::before {
+    width: 80%;
 }
 
 
@@ -353,6 +416,10 @@ section .title::after {
     }
     .about .about-content .right {
         flex: 100%;
+    }
+    .skills .skills-content .column {
+        width: 100%;
+        margin-bottom: 25px;
     }
 }
 
