--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ section .title::after {
     font-size: 20px;
     color: crimson;
     padding: 5px;
-    background: #fff;
+    /* background: #fff; */
     transform: translateX(-50%);
 }
 
