--- a/style.css
+++ b/style.css
@@ -139,11 +139,11 @@ section {
     padding: 100px 0;
 }
 
-.about, .skills, .projects {
+.about, .skills, .projects, .contact {
     font-family: 'Poppins', sans-serif; 
 }
 
-.about .about-content, .skills .skills-content {
+.about .about-content, .skills .skills-content, .contact .contact-content {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -347,7 +347,7 @@ section .title::after {
 }
 
 .projects .carousel .card {
-    background: crimson;
+    background: #111;
     border-radius: 6px;
     padding: 25px 35px;
     text-align: center;
@@ -355,7 +355,7 @@ section .title::after {
 }
 
 .projects .carousel .card:hover {
-    background: #111;
+    background: crimson;
 }
 
 .projects .carousel .card .box {
@@ -374,7 +374,7 @@ section .title::after {
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
-    color: #111;
+    color: crimson;
 }
 
 .projects .carousel .card p {
@@ -386,15 +386,15 @@ section .title::after {
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid #111;
+    border: 5px solid crimson;
 }
 
 .projects .carousel .card:hover img {
-    border-color: crimson;
+    border-color: #111;
 }
 
 .projects .carousel .card:hover .text {
-    color: crimson;
+    color: #111;
 }
 
 .owl-dots {
@@ -418,6 +418,115 @@ section .title::after {
 }
 .owl-dot.active, .owl-dot:hover {
     background: #111!important;
+}
+
+/* contact styling */
+
+.contact .title::after {
+    content: "get in touch"
+}
+
+.contact .contact-content .column {
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .text {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.contact .contact-content .left p {
+    text-align: justify;
+}
+
+.contact .contact-content .left .icons {
+    margin: 10px 0;
+}
+
+.contact .contact-content .row {
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info {
+    margin-left: 30px;
+}
+
+.contact .contact-content .row i {
+    font-size: 25px;
+    color: crimson;
+}
+
+.contact .contact-content .row .info .head {
+    font-weight: 500;
+}
+
+.contact .contact-content .row .info .sub-title {
+    color: #333;
+}
+
+.contact .right form .fields {
+    display: flex;
+}
+
+.contact .right form .field, .contact .right form .fields .field {
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.contact .right form .textarea {
+    height: 80px;
+    width: 100%;
+}
+
+.contact .right form .name {
+    margin-right: 10px;
+}
+
+.contact .right form .email {
+    margin-left: 10px;
+}
+
+.contact .right form .field input, .contact .right form .textarea textarea {
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.contact .right form .textarea textarea {
+    padding-top: 10px;
+    resize: none;
+}
+
+.contact .right form .button {
+    height: 47px;
+    width: 170px;
+}
+
+.contact .right form .button button {
+    width: 100%;
+    height: 100%;
+    border: 2px solid crimson;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.contact .right form .button button:hover {
+    color: crimson;
+    background: none;
 }
 
 
@@ -448,10 +557,6 @@ section .title::after {
     .menu-btn i.active:before {
         content: "\f00d";
     }
-    /* .menu-btn i.active {
-        height: 100px;
-        width: 100px;
-    } */
     .navbar .menu {
         position: fixed;
         height: 100vh;
@@ -498,7 +603,7 @@ section .title::after {
     .about .about-content .right {
         flex: 100%;
     }
-    .skills .skills-content .column {
+    .skills .skills-content .column, .contact .contact-content .column {
         width: 100%;
         margin-bottom: 25px;
     }
