--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   text-decoration: none;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .max-width {
     max-width: 1300px;
     padding: 0 80px;
@@ -26,7 +30,7 @@
 
 .navbar.sticky {
     padding: 15px 0;
-    background: crimson;
+    background: cadetblue;
 }
 
 .navbar .max-width {
@@ -42,7 +46,7 @@
 }
 
 .navbar .logo a span {
-    color: crimson;
+    color: cadetblue;
 }
 
 .navbar.sticky .logo a span {
@@ -64,7 +68,7 @@
 }
 
 .navbar .menu li a:hover {
-    color: crimson;
+    color: cadetblue;
 }
 
 .navbar.sticky .menu li a:hover {
@@ -80,11 +84,28 @@
     display: none;
 }
 
+.scroll-up-btn {
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: cadetblue;
+    right: 30px;
+    bottom: 30px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
 /* home section styling */
 
 .home {
     display: flex;
-    background: url('images/banner7.jpeg') no-repeat center;
+    /* background: url('images/banner7.jpeg') no-repeat center; */
+    background: #111;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -107,24 +128,24 @@
 }
 
 .home .home-content .text-3 {
-    font-size: 40px;
+    font-size: 35px;
     margin: 5px 0;
 }
 
 .home .home-content .text-3 span {
-    color: crimson;
+    color: cadetblue;
     font-weight: 500;
 }
 
 .home .home-content a {
     display: inline-block;
-    background: crimson;
+    background: cadetblue;
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid cadetblue;
     transition: all 0.3s ease;
 }
 
@@ -139,7 +160,7 @@ section {
     padding: 100px 0;
 }
 
-.about, .skills, .projects, .contact {
+.about, .skills, .projects, .contact, .footer {
     font-family: 'Poppins', sans-serif; 
 }
 
@@ -176,7 +197,7 @@ section .title::after {
     bottom: -12px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: cadetblue;
     padding: 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -214,7 +235,7 @@ section .title::after {
 }
 
 .about .about-content .right .text span {
-    color: crimson;
+    color: cadetblue;
 }
 
 .about .about-content .right p {
@@ -223,19 +244,19 @@ section .title::after {
 
 .about .about-content .right a {
     display: inline-block;
-    background: crimson;
+    background: cadetblue;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid cadetblue;
     transition: all 0.3s ease;
 }
 
 .about .about-content .right a:hover {
-    color: crimson;
+    color: cadetblue;
     background: none;
 }
 
@@ -267,19 +288,19 @@ section .title::after {
 
 .skills .skills-content .left a {
     display: inline-block;
-    background: crimson;
+    background: cadetblue;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid cadetblue;
     transition: all 0.3s ease
 }
 
 .skills .skills-content .left a:hover {
-    color: crimson;
+    color: cadetblue;
     background: none;
 }
 
@@ -312,7 +333,7 @@ section .title::after {
     height: 100%;
     left: 0;
     top: 0;
-    background: crimson;
+    background: cadetblue;
 }
 
 .skills .skills-content .right .html::before {
@@ -355,7 +376,7 @@ section .title::after {
 }
 
 .projects .carousel .card:hover {
-    background: crimson;
+    background: cadetblue;
 }
 
 .projects .carousel .card .box {
@@ -374,7 +395,7 @@ section .title::after {
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
-    color: crimson;
+    color: cadetblue;
 }
 
 .projects .carousel .card p {
@@ -386,7 +407,7 @@ section .title::after {
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid crimson;
+    border: 5px solid cadetblue;
 }
 
 .projects .carousel .card:hover img {
@@ -422,7 +443,17 @@ section .title::after {
 
 /* contact styling */
 
+.contact {
+    color: #fff;
+    background: #111;
+}
+
+.contact .title::before {
+    background: #fff;
+}
+
 .contact .title::after {
+    background: #111;
     content: "get in touch"
 }
 
@@ -456,15 +487,11 @@ section .title::after {
 
 .contact .contact-content .row i {
     font-size: 25px;
-    color: crimson;
+    color: cadetblue;
 }
 
 .contact .contact-content .row .info .head {
     font-weight: 500;
-}
-
-.contact .contact-content .row .info .sub-title {
-    color: #333;
 }
 
 .contact .right form .fields {
@@ -514,8 +541,8 @@ section .title::after {
 .contact .right form .button button {
     width: 100%;
     height: 100%;
-    border: 2px solid crimson;
-    background: crimson;
+    border: 2px solid cadetblue;
+    background: cadetblue;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
@@ -525,8 +552,24 @@ section .title::after {
 }
 
 .contact .right form .button button:hover {
-    color: crimson;
+    color: cadetblue;
     background: none;
+}
+
+footer {
+    background: cadetblue;
+    padding: 20px 23px;
+    color: #fff;
+    text-align: center;
+}
+
+footer span a {
+    color: #111;
+    text-decoration: none;
+}
+
+footer span a:hover {
+    text-decoration: underline;
 }
 
 
