--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ html {
     width: 42px;
     background: cadetblue;
     right: 30px;
-    bottom: 30px;
+    bottom: 10px;
     text-align: center;
     line-height: 45px;
     color: #fff;
@@ -98,6 +98,15 @@ html {
     font-size: 30px;
     border-radius: 6px;
     cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.2s ease;
+}
+
+.scroll-up-btn.show {
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
 }
 
 /* home section styling */
