--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 .max-width {
-    max-width: 1300px;
-    padding: 0 80px;
-    margin: auto;
+  max-width: 1300px;
+  padding: 0 80px;
+  margin: auto;
 }
 
 /* navbar styling  */
@@ -29,14 +29,14 @@ html {
 }
 
 .navbar.sticky {
-    padding: 15px 0;
-    background: cadetblue;
+  padding: 15px 0;
+  background: cadetblue;
 }
 
 .navbar .max-width {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .navbar .logo a {
@@ -46,12 +46,12 @@ html {
 }
 
 .navbar .logo a span {
-    color: cadetblue;
+  color: cadetblue;
 }
 
 .navbar.sticky .logo a span {
-    color: #fff;
-    transition: all 0.4s ease;
+  color: #fff;
+  transition: all 0.4s ease;
 }
 
 .navbar .menu li {
@@ -60,6 +60,7 @@ html {
 }
 
 .navbar .menu li a {
+  display: block;
   color: #fff;
   font-size: 18px;
   font-weight: 500;
@@ -68,604 +69,620 @@ html {
 }
 
 .navbar .menu li a:hover {
-    color: cadetblue;
+  color: cadetblue;
 }
 
 .navbar.sticky .menu li a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 /* menu button styling  */
 
 .menu-btn {
-    color: #fff;
-    font-size: 23px;
-    cursor: pointer;
-    display: none;
+  color: #fff;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
 }
 
 .scroll-up-btn {
-    position: fixed;
-    height: 45px;
-    width: 42px;
-    background: cadetblue;
-    right: 30px;
-    bottom: 10px;
-    text-align: center;
-    line-height: 45px;
-    color: #fff;
-    z-index: 9999;
-    font-size: 30px;
-    border-radius: 6px;
-    cursor: pointer;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s ease;
+  position: fixed;
+  height: 45px;
+  width: 42px;
+  background: cadetblue;
+  right: 30px;
+  bottom: 10px;
+  text-align: center;
+  line-height: 45px;
+  color: #fff;
+  z-index: 9999;
+  font-size: 30px;
+  border-radius: 6px;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.2s ease;
 }
 
 .scroll-up-btn.show {
-    bottom: 30px;
-    opacity: 1;
-    pointer-events: auto;
+  bottom: 30px;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 /* home section styling */
 
 .home {
-    display: flex;
-    /* background: url('images/banner7.jpeg') no-repeat center; */
-    background: #111;
-    height: 100vh;
-    color: #fff;
-    min-height: 500px;
-    font-family: 'Ubuntu', sans-serif;
+  display: flex;
+  /* background: url('images/banner7.jpeg') no-repeat center; */
+  background: #111;
+  height: 100vh;
+  color: #fff;
+  min-height: 500px;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .home .max-width {
-    margin: auto;
-    /* margin: auto 0 auto 40px; for right based image  */
+  margin: auto;
+  /* margin: auto 0 auto 40px; for right based image  */
 }
 
 .home .home-content .text-1 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .home .home-content .text-2 {
-    font-size: 100px;
-    font-weight: 600;
-    margin-left: -3px;
+  font-size: 100px;
+  font-weight: 600;
+  margin-left: -3px;
 }
 
 .home .home-content .text-3 {
-    font-size: 35px;
-    margin: 5px 0;
+  font-size: 35px;
+  margin: 5px 0;
 }
 
 .home .home-content .text-3 span {
-    color: cadetblue;
-    font-weight: 500;
+  color: cadetblue;
+  font-weight: 500;
 }
 
 .home .home-content a {
-    display: inline-block;
-    background: cadetblue;
-    color: #fff;
-    font-size: 25px;
-    padding: 12px 36px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid cadetblue;
-    transition: all 0.3s ease;
+  display: inline-block;
+  background: cadetblue;
+  color: #fff;
+  font-size: 25px;
+  padding: 12px 36px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid cadetblue;
+  transition: all 0.3s ease;
 }
 
 .home .home-content a:hover {
-    color: #fff;
-    background: none;
+  color: #fff;
+  background: none;
 }
 
 /* constant section styling */
 
 section {
-    padding: 100px 0;
+  padding: 100px 0;
 }
 
-.about, .skills, .projects, .contact, .footer {
-    font-family: 'Poppins', sans-serif; 
+.about,
+.skills,
+.projects,
+.contact,
+.footer {
+  font-family: "Poppins", sans-serif;
 }
 
-.about .about-content, .skills .skills-content, .contact .contact-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+.about .about-content,
+.skills .skills-content,
+.contact .contact-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 section .title {
-    position: relative;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 500;
-    margin-bottom: 60px;
-    padding-bottom: 20px;
-    font-family: 'Ubuntu', sans-serif;
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  font-family: "Ubuntu", sans-serif;
 }
 
 section .title::before {
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 180px;
-    height: 3px;
-    background: #111;
-    transform: translateX(-50%);
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: #111;
+  transform: translateX(-50%);
 }
 
 section .title::after {
-    position: absolute;
-    bottom: -12px;
-    left: 50%;
-    font-size: 20px;
-    color: cadetblue;
-    padding: 5px;
-    background: #fff;
-    transform: translateX(-50%);
+  position: absolute;
+  bottom: -12px;
+  left: 50%;
+  font-size: 20px;
+  color: cadetblue;
+  padding: 5px;
+  background: #fff;
+  transform: translateX(-50%);
 }
 
 /* about section styling */
 
 .about {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .about .title::after {
-    content: "who I am";
+  content: "who I am";
 }
 
 .about .about-content .left {
-    width: 45%;
+  width: 45%;
 }
 
 .about .about-content .left img {
-    height: 400px;
-    width: 400px;
-    object-fit: cover;
-    border-radius: 6px;
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 6px;
 }
 
 .about .about-content .right {
-    width: 55%;
+  width: 55%;
 }
 
 .about .about-content .right .text {
-    font-size: 23px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 23px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 .about .about-content .right .text span {
-    color: cadetblue;
+  color: cadetblue;
 }
 
 .about .about-content .right p {
-    text-align: justify;
+  text-align: justify;
 }
 
 .about .about-content .right a {
-    display: inline-block;
-    background: cadetblue;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 30px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid cadetblue;
-    transition: all 0.3s ease;
+  display: inline-block;
+  background: cadetblue;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid cadetblue;
+  transition: all 0.3s ease;
 }
 
 .about .about-content .right a:hover {
-    color: cadetblue;
-    background: none;
+  color: cadetblue;
+  background: none;
 }
+
+.about .about-content .social i {
+    padding: 10px;
+    color: #111;
+    font-size: 35px;
+    font-weight: 500;
+}
+
 
 /* skills styling section */
 
 .skills {
-    color: #fff;
-    background: #111;
+  color: #fff;
+  background: #111;
 }
 
 .skills .title::before {
-    background: #fff;
+  background: #fff;
 }
 
 .skills .title::after {
-    background: #111;
-    content: "what I know";
+  background: #111;
+  content: "what I know";
 }
 
 .skills .skills-content .column {
-    width: calc(50% - 30px);
+  width: calc(50% - 30px);
 }
 
 .skills .skills-content .left .text {
-    font-size: 25px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 .skills .skills-content .left a {
-    display: inline-block;
-    background: cadetblue;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 8px 16px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid cadetblue;
-    transition: all 0.3s ease
+  display: inline-block;
+  background: cadetblue;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 16px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid cadetblue;
+  transition: all 0.3s ease;
 }
 
 .skills .skills-content .left a:hover {
-    color: cadetblue;
-    background: none;
+  color: cadetblue;
+  background: none;
 }
 
 .skills .skills-content .right .bars {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .skills .skills-content .right .info {
-    display: flex;
-    margin-bottom: 5px;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  margin-bottom: 5px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .skills .skills-content .right span {
-    font-weight: 500;
-    font-size: 16px;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .skills .skills-content .right .line {
-    height: 5px;
-    width: 100%;
-    background: lightgrey;
-    position: relative;
+  height: 5px;
+  width: 100%;
+  background: lightgrey;
+  position: relative;
 }
 
 .skills .skills-content .right .line::before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: cadetblue;
+  content: "";
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: cadetblue;
 }
 
 .skills .skills-content .right .html::before {
-    width: 95%;
+  width: 95%;
 }
 
 .skills .skills-content .right .css::before {
-    width: 80%;
+  width: 80%;
 }
 
 .skills .skills-content .right .js::before {
-    width: 90%;
+  width: 90%;
 }
 
 .skills .skills-content .right .react::before {
-    width: 70%;
+  width: 70%;
 }
 
 .skills .skills-content .right .ruby::before {
-    width: 75%;
+  width: 75%;
 }
 
 .skills .skills-content .right .sql::before {
-    width: 80%;
+  width: 80%;
 }
 
 /* projects styling */
 
 .projects .title::after {
-    content: "what I've done";
-    font-size: 18px;
+  content: "what I've done";
+  font-size: 18px;
 }
 
 .projects .carousel .card {
-    background: #111;
-    border-radius: 6px;
-    padding: 25px 35px;
-    text-align: center;
-    transition: all 0.3s ease;
+  background: #111;
+  border-radius: 6px;
+  padding: 25px 35px;
+  text-align: center;
+  transition: all 0.3s ease;
 }
 
 .projects .carousel .card:hover {
-    background: cadetblue;
+  background: cadetblue;
 }
 
 .projects .carousel .card .box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
 }
 
 .projects .carousel .card:hover .box {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 .projects .carousel .card .text {
-    font-size: 25px;
-    font-weight: 500;
-    margin: 10px 0 7px 0;
-    color: cadetblue;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0 7px 0;
+  color: cadetblue;
 }
 
 .projects .carousel .card p {
-    color: #fff;
+  color: #fff;
 }
 
 .projects .carousel .card img {
-    height: 150px; 
-    width: 150px;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 5px solid cadetblue;
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 5px solid cadetblue;
 }
 
 .projects .carousel .card:hover img {
-    border-color: #111;
+  border-color: #111;
 }
 
 .projects .carousel .card:hover .text {
-    color: #111;
+  color: #111;
 }
 
 .owl-dots {
-    text-align: center;
-    margin-top: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .owl-dot {
-    height: 13px;
-    width: 13px;
-    margin: 0 5px;
-    outline: none!important;
-    border-radius: 50%;
-    border: 2px solid #111!important;
-    transition: all 0.3s ease;
+  height: 13px;
+  width: 13px;
+  margin: 0 5px;
+  outline: none !important;
+  border-radius: 50%;
+  border: 2px solid #111 !important;
+  transition: all 0.3s ease;
 }
 
 .owl-dot.active {
-    width: 35px;
-    border-radius: 14px;
+  width: 35px;
+  border-radius: 14px;
 }
-.owl-dot.active, .owl-dot:hover {
-    background: #111!important;
+.owl-dot.active,
+.owl-dot:hover {
+  background: #111 !important;
 }
 
 /* contact styling */
 
 .contact {
-    color: #fff;
-    background: #111;
+  color: #fff;
+  background: #111;
 }
 
 .contact .title::before {
-    background: #fff;
+  background: #fff;
 }
 
 .contact .title::after {
-    background: #111;
-    content: "get in touch"
+  background: #111;
+  content: "get in touch";
 }
 
 .contact .contact-content .column {
-    width: calc(50% - 30px);
+  width: calc(50% - 30px);
 }
 
 .contact .contact-content .text {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 .contact .contact-content .left p {
-    text-align: justify;
+  text-align: justify;
 }
 
 .contact .contact-content .left .icons {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 
 .contact .contact-content .row {
-    display: flex;
-    height: 65px;
-    align-items: center;
+  display: flex;
+  height: 65px;
+  align-items: center;
 }
 
 .contact .contact-content .row .info {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 .contact .contact-content .row i {
-    font-size: 25px;
-    color: cadetblue;
+  font-size: 25px;
+  color: cadetblue;
 }
 
 .contact .contact-content .row .info .head {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .contact .right form .fields {
-    display: flex;
+  display: flex;
 }
 
-.contact .right form .field, .contact .right form .fields .field {
-    height: 45px;
-    width: 100%;
-    margin-bottom: 15px;
+.contact .right form .field,
+.contact .right form .fields .field {
+  height: 45px;
+  width: 100%;
+  margin-bottom: 15px;
 }
 
 .contact .right form .textarea {
-    height: 80px;
-    width: 100%;
+  height: 80px;
+  width: 100%;
 }
 
 .contact .right form .name {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .contact .right form .email {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
-.contact .right form .field input, .contact .right form .textarea textarea {
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
-    font-family: 'Poppins', sans-serif;
+.contact .right form .field input,
+.contact .right form .textarea textarea {
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-family: "Poppins", sans-serif;
 }
 
 .contact .right form .textarea textarea {
-    padding-top: 10px;
-    resize: none;
+  padding-top: 10px;
+  resize: none;
 }
 
 .contact .right form .button {
-    height: 47px;
-    width: 170px;
+  height: 47px;
+  width: 170px;
 }
 
 .contact .right form .button button {
-    width: 100%;
-    height: 100%;
-    border: 2px solid cadetblue;
-    background: cadetblue;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: all 0.3s ease;
+  width: 100%;
+  height: 100%;
+  border: 2px solid cadetblue;
+  background: cadetblue;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .contact .right form .button button:hover {
-    color: cadetblue;
-    background: none;
+  color: cadetblue;
+  background: none;
 }
 
 footer {
-    background: cadetblue;
-    padding: 20px 23px;
-    color: #fff;
-    text-align: center;
+  background: cadetblue;
+  padding: 20px 23px;
+  color: #fff;
+  text-align: center;
 }
 
 footer span a {
-    color: #111;
-    text-decoration: none;
+  color: #111;
+  text-decoration: none;
 }
 
 footer span a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
-
 
 /* responsive media query start */
 
-
 @media (max-width: 1104px) {
-    .about .about-content .left img {
-        height: 350px;
-        width: 350px;
-    }
+  .about .about-content .left img {
+    height: 350px;
+    width: 350px;
+  }
 }
 
 @media (max-width: 991px) {
-    .max-width {
-        padding: 0 50px;
-    }
+  .max-width {
+    padding: 0 50px;
+  }
 }
 
 @media (max-width: 947px) {
-    .max-width {
-        padding: 0 50px;
-    }
-    .menu-btn {
-        display: block;
-        z-index: 999;
-    }
-    .menu-btn i.active:before {
-        content: "\f00d";
-    }
-    .navbar .menu {
-        position: fixed;
-        height: 100vh;
-        width: 100%;
-        left: -100%;
-        top: 0;
-        background: #111;
-        text-align: center;
-        padding-top: 80px;
-        transition: all 0.3s ease;
-    }
-    .navbar .menu.active {
-        left: 0;
-    }
-    .navbar .menu li {
-        display: block;
-    }
-    .navbar .menu li a {
-        display: inline-block;
-        margin: 20px 0;
-        font-size: 25px;
-    }
-    .home .home-content .text-2 {
-        font-size: 80px;
-    }
-    .home .home-content .text-3 {
-        font-size: 35px;
-    }
-    .home .home-content a {
-        font-size: 20px;
-        padding: 10px 30px;
-    }
-    .max-width {
-        max-width: 800px;
-    }
-    .about .about-content .column {
-        width: 50%;
-    }
-    .about .about-content .left {
-        display: flex;
-        justify-content: center;
-        margin: 0 auto 60px;
-    }
-    .about .about-content .right {
-        flex: 100%;
-    }
-    .skills .skills-content .column, .contact .contact-content .column {
-        width: 100%;
-        margin-bottom: 25px;
-    }
+  .max-width {
+    padding: 0 50px;
+  }
+  .menu-btn {
+    display: block;
+    z-index: 999;
+  }
+  .menu-btn i.active:before {
+    content: "\f00d";
+  }
+  .navbar .menu {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    background: #111;
+    text-align: center;
+    padding-top: 80px;
+    transition: all 0.3s ease;
+  }
+  .navbar .menu.active {
+    left: 0;
+  }
+  .navbar .menu li {
+    display: block;
+  }
+  .navbar .menu li a {
+    display: inline-block;
+    margin: 20px 0;
+    font-size: 25px;
+  }
+  .home .home-content .text-2 {
+    font-size: 80px;
+  }
+  .home .home-content .text-3 {
+    font-size: 35px;
+  }
+  .home .home-content a {
+    font-size: 20px;
+    padding: 10px 30px;
+  }
+  .max-width {
+    max-width: 800px;
+  }
+  .about .about-content .column {
+    width: 50%;
+  }
+  .about .about-content .left {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
+  }
+  .about .about-content .right {
+    flex: 100%;
+  }
+  .skills .skills-content .column,
+  .contact .contact-content .column {
+    width: 100%;
+    margin-bottom: 25px;
+  }
 }
 
 @media (max-width: 650px) {
-    .home .home-content .text-2 {
-        font-size: 50px;
-    }
-    .home .home-content .text-3 {
-        font-size: 27px;
-    }
+  .home .home-content .text-2 {
+    font-size: 50px;
+  }
+  .home .home-content .text-3 {
+    font-size: 27px;
+  }
 }
